Repair Sarah R2 owner acceptance blockers